# tree-nvim-rs

./: .gitmodules  Cargo.toml  README.md
autoload/: tree.vim
autoload/tree/: custom.vim  init.vim  util.vim
lua/: tree.lua
lua/tree/: view.lua
plugin/: tree.vim
src/: column.rs  errors.rs  fs_utils.rs  main.rs  singleton.rs  tree.rs  tree_handler.rs
