[package]
name = "tree-nvim-rs"
version = "0.1.0"
authors = ["LI Tao <litao912002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nvim-rs = "0.1.0"
# TODO: use the version in crate.io. Currently only the master version has the working socket connection
nvim-rs = { path = "nvim-rs", features=["use_async-std"] }
path-clean = "0.1.0"
async-trait = "0.1.18"
simplelog = "0.7.4"
log = "0.3.7"
fork = "0.1.10"
async-std = "1.4.0"
backtrace = "0.3.42"
unicode-width = "0.1.7"
futures = { version = "0.3.1", features = ["io-compat"] }
git2 = "0.11.0"
