[package]
name = "tree-nvim-rs"
version = "0.1.0"
authors = ["LI Tao <litao912002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nvim-rs = "0.1.0"
# TODO: use the version in crate.io. Currently only the master version has the working socket connection
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", features=["use_async-std"] }
path-clean = "0.1.0"
async-trait = "0.1.42"
simplelog = "0.9.0"
log = "0.4.13"
async-std = "1.9.0"
backtrace = "0.3.55"
unicode-width = "0.1.8"
futures = { version = "0.3.12", features = ["io-compat"] }
git2 = "0.13.15"
chrono = "0.4.19"
