[package]
name = "tree-nvim-rs"
version = "0.1.0"
authors = ["LI Tao <litao912002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nvim-rs = "0.1.0"
# TODO: use the version in crate.io. Currently only the master version has the working socket connection
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", features=["use_async-std"] }
path-clean = "*"
async-trait = "*"
simplelog = "*"
log = "*"
async-std = "*"
backtrace = "*"
unicode-width = "*"
futures = { version = "*", features = ["io-compat"] }
git2 = "*"
chrono = "*"
fs_extra = "*"
